feat: fix swagger UI
