# app/controllers/text_controller.go
@@ -11,6 +11,15 @@ import (
 	"github.com/tempfiles-Team/tempfiles-backend/pkg/utils"
 )
 
+// DeleteText godoc
+// @Summary Delete text item.
+// @Description Delete text item.
+// @Tags text
+// @Accept */*
+// @Produce json
+// @Param id path string true "text id"
+// @Success 200 {object} utils.Response
+// @Router /text/{id} [delete]
 func DeleteText(c *fiber.Ctx) error {
 	id := c.Params("id")
 
@@ -37,6 +46,14 @@ func DeleteText(c *fiber.Ctx) error {
 
 }
 
+// ListText godoc
+// @Summary List text items.
+// @Description List text items.
+// @Tags text
+// @Accept */*
+// @Produce json
+// @Success 200 {object} utils.Response{data=models.TextTracking}
+// @Router /texts [get]
 func ListText(c *fiber.Ctx) error {
 
 	TextS := queries.TextState{}
@@ -48,6 +65,16 @@ func ListText(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(utils.NewSuccessDataResponse(texts))
 }
 
+// DownloadText godoc
+// @Summary Download text item.
+// @Description Download text item.
+// @Tags text
+// @Accept */*
+// @Produce json
+// @Param id path string true "text id"
+// @Param token query string false "token"
+// @Success 200 {object} utils.Response
+// @Router /text/{id} [get]
 func DownloadText(c *fiber.Ctx) error {
 	id := c.Params("id")
 
@@ -88,6 +115,16 @@ func DownloadText(c *fiber.Ctx) error {
 	}))
 }
 
+// UploadText godoc
+// @Summary Upload text item.
+// @Description Upload text item.
+// @Tags text
+// @Accept */*
+// @Produce json
+// @Param X-Download-Limit header string false "download limit"
+// @Param X-Time-Limit header string false "time limit"
+// @Success 200 {object} utils.Response
+// @Router /text/new [post]
 func UploadText(c *fiber.Ctx) error {
 
 	pasteText := string(c.Body())
